--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 192.168.1.251 -p 3307",
+    "dev": "next dev",
     "build": "next build",
-    "start": "node server.js -H 192.168.1.251 -p 3307",
+    "start": "node server.js",
     "lint": "next lint",
     "setup-db": "node setup-database.js"
   },
