--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "node server.js",
     "lint": "next lint",
-    "setup-db": "node setup-database.js"
+    "setup-db": "node setup-database.js",
+    "build:production": "NODE_ENV=production next build",
+    "clean": "rimraf .next out"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.11",
