--- a/package.json
+++ b/package.json
@@ -12,61 +12,28 @@
     "clean": "rimraf .next out"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.11",
-    "@radix-ui/react-alert-dialog": "^1.1.14",
-    "@radix-ui/react-aspect-ratio": "^1.1.7",
-    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-context-menu": "^2.2.15",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-hover-card": "^1.1.14",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-menubar": "^1.1.15",
-    "@radix-ui/react-navigation-menu": "^1.2.13",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^1.2.2",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slider": "^1.3.5",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-toast": "^1.2.14",
-    "@radix-ui/react-toggle-group": "^1.1.10",
-    "@radix-ui/react-tooltip": "^1.2.7",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "cmdk": "^1.1.1",
     "date-fns": "^2.30.0",
-    "embla-carousel-react": "^8.6.0",
-    "html2canvas": "^1.4.1",
-    "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.279.0",
     "mysql2": "^3.6.0",
     "next": "^14.0.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.4.29",
-    "qrcode": "^1.5.4",
-    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
-    "react-day-picker": "^9.8.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.62.0",
-    "react-resizable-panels": "^3.0.4",
-    "recharts": "^3.1.2",
-    "sonner": "^2.0.7",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.1.0",
-    "vaul": "^1.1.2"
+    "tailwindcss-animate": "^1.0.7"
   },
   "engines": {
     "node": ">=18.0.0"
