--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clean": "rimraf .next out"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
@@ -23,12 +24,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.279.0",
     "mysql2": "^3.6.0",
     "next": "^14.0.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.4.29",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
