--- a/package.json
+++ b/package.json
@@ -7,36 +7,63 @@
     "build": "next build",
     "start": "node server.js",
     "lint": "next lint",
-    "setup-db": "node setup-database.js",
-    "build:production": "NODE_ENV=production next build",
-    "clean": "rimraf .next out"
+    "setup-db": "node setup-database.js"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.0.4",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-context-menu": "^2.1.4",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-hover-card": "^1.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.3",
+    "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-popover": "^1.0.6",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-toggle-group": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "autoprefixer": "^10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.0.0",
     "html2canvas": "^1.4.1",
+    "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.279.0",
     "mysql2": "^3.6.0",
     "next": "^14.0.0",
     "next-themes": "^0.4.6",
     "postcss": "^8.4.29",
+    "qrcode": "^1.5.3",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-resizable-panels": "^0.0.55",
+    "recharts": "^2.8.0",
+    "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.0",
+    "vaul": "^0.7.0"
   },
   "engines": {
     "node": ">=18.0.0"
