--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "node server.js",
     "lint": "next lint",
-    "setup-db": "node setup-database.js"
+    "setup-db": "node setup-database.js",
+    "setup-vercel-db": "node scripts/setup-vercel-db.js"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.0.4",
@@ -36,6 +37,7 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@vercel/postgres": "^0.10.0",
     "autoprefixer": "^10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
