--- a/package.json
+++ b/package.json
@@ -71,8 +71,10 @@
     "node": ">=18.0.0"
   },
   "devDependencies": {
-    "@types/node": "24.1.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/uuid": "^10.0.0",
-    "typescript": "5.8.3"
+    "typescript": "^5.0.0"
   }
 }
